--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,12 @@
             <h1>Rock 💎 Paper 📄 Scissors ✂️</h1>
         </header>
         <nav id="nav">
-            <a href="/welcome">Welcome Page</a>
+            <div>
+                <a href="/welcome">Welcome Page</a>
+            </div>
+            <div>
+                <a href="/welcome">Play Again!</a>
+            </div>
         </nav>
         <section id="content_1">
             {% block content %}
