--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -16,5 +16,16 @@
             Scissors ✂️ > Paper 📄
         </li>
     </ul>
+
+    <form action="/play" method="post">
+        <label for="player_1_choice">Choose:</label>
+        <select name="player_1_choice" id="player_1_choice">
+            <option value="rock">rock</option>
+            <option value="paper">paper</option>
+            <option value="scissors">scissors</option>
+        </select>
+        <input type="submit" id="submit", value="Play">
+    </form>
+
     
 {% endblock content %}
