--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
                 <a href="/welcome">Welcome Page</a>
             </div>
             <div>
-                <a href="/welcome">Play Again!</a>
+                <a href="/play">Play!</a>
             </div>
         </nav>
         <section id="content_1">
