--- a/templates/play.html
+++ b/templates/play.html
@@ -3,6 +3,9 @@
 {% block content %}
 
     <form action="/result" method="post">
+        <label for="player_1_name">Enter Name:</label>
+        <input type="text" name="player_1_name" id="player_1_name"><br>
+        
         <label for="player_1_choice">Choose:</label>
         <select name="player_1_choice" id="player_1_choice">
             <option value="rock">rock</option>
